# AgentChat

./: .gitattributes  .gitignore  README.md
backend/: .env.example  hello_langchain.py  hello_tool.py  main.py  main1.py  main_db.py  pyproject.toml  test_create_task_tool.py  test_document.py  test_document_loader.py  test_embeddings.py  test_rag.py  test_retriever.py  test_task_agent.py  test_task_tool.py  test_text_splitter.py
backend/alembic/: env.py
backend/alembic/versions/: 0002_task_run_lease_retry.py  0003_mcp_gateway_foundation.py  089d0dcd96ef_baseline_schema.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/ai/: agents.py  chains.py  config.py  document_processing.py  errors.py  models.py  orchestrator.py  prompts.py  rag.py  tools.py
backend/app/mcp/: __init__.py  config.py  registry.py  transports.py
backend/app/repositories/: __init__.py  chat.py  documents.py  settings.py  tasks.py  users.py
backend/app/routers/: ai.py  auth.py  documents.py  mcp.py  settings.py  tasks.py
backend/app/services/: __init__.py  auth.py  config.py  dependencies.py  document_ingestion.py  document_notifications.py  email.py  encryption.py  task_executor.py  task_queue.py  task_worker.py  upload_policy.py
backend/docs/: agentchat-guide.md
backend/scripts/: dev_all.py  scan_masked_secrets.py
backend/tests/: conftest.py  test_ai.py  test_ai_errors.py  test_chat_memory.py  test_document_processing.py  test_dynamic_ai_config.py  test_mcp.py  test_rag.py  test_settings_secrets.py  test_tasks.py  test_upload.py
docs/: auth-multi-user-isolation-plan.md  langchain-4-day-learning-plan.md  langchain-agentchat-code-notes.md  mcp-tool-platform-plan.md
frontend/: .gitignore  README.md  lucide-animated-1.0.5.tgz  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/doc/: frontend-technology-stack.md
frontend/src/app/: globals.css  layout.tsx
(+19 files in other folders)
