[project]
name = "agentchat-backend"
version = "0.1.0"
description = "FastAPI and LangChain based AI task assistant backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "langchain-milvus>=0.2,<1",
    "psycopg[binary]>=3,<4",
    "pymilvus>=2.5,<3",
    "python-dotenv>=1,<2",
    "python-multipart>=0.0.18,<1",
    "sqlalchemy>=2,<3",
]

[project.optional-dependencies]
ai = [
    "langchain>=1,<2",
    "langchain-openai>=1,<2",
    "langchain-text-splitters>=1,<2",
    "markdown>=3,<4",
    "pypdf>=6,<7",
    "python-docx>=1,<2",
    "unstructured>=0.16,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<10",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
