[project]
name = "agentchat-backend"
version = "0.1.0"
description = "FastAPI and LangChain based AI task assistant backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "bcrypt>=4.0.0,<4.1.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.115,<1",
    "langchain>=1,<2",
    "langchain-milvus>=0.2,<1",
    "langchain-mcp-adapters>=0.3,<1",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3,<4",
    "pymilvus>=2.5,<3",
    "python-dotenv>=1,<2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.18,<1",
    "sqlalchemy>=2,<3",
]

[project.optional-dependencies]
ai = [
    "markdown>=3,<4",
    "pypdf>=6,<7",
    "python-docx>=1,<2",
    "unstructured>=0.16,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<10",
    "ruff>=0.11,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
